# opengl-barebone-windows

./: CMakeLists.txt  main.cpp
